tests/ui/resolve/func_visibility.stderr
error: no visibility specified
  --> ROOT/tests/ui/resolve/func_visibility.sol:LL:CC
   |
LL |     function c() {}
   |     ^^^^^^^^^^^^^^^
   |
   = help: add `public` to the declaration

error: no visibility specified
  --> ROOT/tests/ui/resolve/func_visibility.sol:LL:CC
   |
LL |     function c() {}
   |     ^^^^^^^^^^^^^^^
   |
   = help: add `external` to the declaration

error: no visibility specified
  --> ROOT/tests/ui/resolve/func_visibility.sol:LL:CC
   |
LL |     fallback() {}
   |     ^^^^^^^^^^^^^
   |
   = help: add `external` to the declaration

error: no visibility specified
  --> ROOT/tests/ui/resolve/func_visibility.sol:LL:CC
   |
LL |     receive() {}
   |     ^^^^^^^^^^^^
   |
   = help: add `external` to the declaration

error: aborting due to 4 previous errors

